--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -336,7 +336,7 @@ main{
     font-family: monospace;
     max-width: 1000px;
     overflow-y: hidden;
-    overflow-x: auto;
+    overflow-x: hidden;
     white-space: nowrap;
     width: auto;
     background-color: #161515;
@@ -402,8 +402,9 @@ main{
     transition: all 0.3s;
 }
 .comandos textarea.text::-webkit-scrollbar-track {
-    border 1px solid #fff;
     box-shadow: 0 0 5px 5px #161515 inset;
+    border-radius: 10px;
+    padding-left: 30px;
 }    
 .comandos textarea.text::-webkit-scrollbar-thumb {
     background: rgba(255, 255, 255, 0.2); /* Color de la barra de desplazamiento */
@@ -417,7 +418,6 @@ main{
 }
 .comandos textarea.text::-webkit-scrollbar-thumb:hover {
     background-color: rgba(255, 255, 255, 0.3); /* Color de la barra de desplazamiento al pasar el cursor sobre ella */
-    cursor: pointer;
 }
 
   /* Estilos para el código 
