--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -652,7 +652,7 @@ main{
     display: inline; /* Permanece en la misma línea que el texto */
     height: 17px;  
     width: 1px;  
-    margin-left: -112px;  
+    margin-left: -103px;  
     animation: blink 1200ms linear infinite;
 }  
 .command-response-container {
@@ -789,7 +789,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 .blog-image-zoom img {
     max-width: 100%;
-    width: 700px;
+    width: 60%;
     height: auto;
 }
 
@@ -992,6 +992,10 @@ body::-webkit-scrollbar-thumb:hover {
     .text__articulo-cover ul li{
         list-style-position: inside;
      }
+
+     .blog-image-zoom img {
+        width: 100%;
+    }
 
     .number {
         width: 30px;
