--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -243,8 +243,12 @@ a:hover {
     font-family: 'Roboto';
 }
 .resaltado18 {
-    font-weight: bold;
     font-style: italic;
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: white;
+    opacity: 0.7;
     font-family: 'Roboto';
 }
 
