--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -22,11 +22,23 @@ header{
 
 
 .container__header{
-    max-width: 1200px;
+    width: 100%;
     height: 100%;
-    margin: auto;
+    /*margin: auto;*/
     padding: 40px;
-    padding-top: 80px;
+    /*padding-top: 80px;*/
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header.mover{
+    background: rgb(0, 0, 0, 0.870);
+    width: 100%;
+    position: fixed;
+    z-index: 10;
+    margin: auto;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
