--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,11 +16,23 @@ header{
 }
 
 .container__header{
-    max-width: 1200px;
+    width: 100%;
     height: 100%;
-    margin: auto;
+    /*margin: auto;*/
     padding: 40px;
-    padding-top: 80px;
+    /*padding-top: 80px;*/
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header.mover{
+    background: #f5f5f5;
+    width: 100%;
+    position: fixed;
+    z-index: 10;
+    margin: auto;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -185,7 +197,7 @@ main{
 
 .media__cover video{
     width: 100%;
-    margin-top: -40px;
+    margin-top: -10px;
 }
 
 
