--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -33,7 +33,7 @@ header{
 }
 
 header.mover{
-    background: rgb(0, 0, 0, 0.870);
+    background: rgba(0, 0, 0, 1);
     width: 100%;
     position: fixed;
     z-index: 10;
