--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -340,6 +340,12 @@ a:hover {
     opacity: 0.7;
   }
 
+iframe {
+    display: block;
+    margin: 0 auto; /* Centra horizontalmente el iframe */
+    width: 560px; /* Ancho del video */
+    height: 315px; /* Alto del video */
+}
 
 /* Estilos para la sección de comandos */
 .contenedor{
