--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -320,6 +320,48 @@ a:hover {
     opacity: 0.7;
 }
 
+.custom-list {
+    list-style-type: none; /* Quita el punto predeterminado */
+    margin: 0;
+    padding: 0;
+}
+  
+  .custom-list li {
+    position: relative;
+    
+}
+
+.custom-list li::before {
+    content: "❍ ";  /* símbolo que se mostrará antes de cada elemento */  
+    left: -20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: white;
+    font-family: 'Roboto';
+    opacity: 0.7;
+}
+
+.custom-list2 {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+  
+  .custom-list2 li {
+    position: relative;
+    
+}
+
+.custom-list2 li::before {
+    content: "∘ ";  /* símbolo que se mostrará antes de cada elemento */  
+    left: -20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: white;
+    font-family: 'Roboto';
+    opacity: 0.7;
+}
+
 /* Tablas */
 .text__articulo-cover table{
     font-size: 16px;
