--- a/css/estilos-articulo.css
+++ b/css/estilos-articulo.css
@@ -266,7 +266,7 @@ a:hover {
 /* Italic */
 .resaltado9 {
     font-style: italic;
-    color: #acb8fc; /* Cambia el color a tu preferencia */ 
+    color: #a5abf8; /* Cambia el color a tu preferencia */ 
     opacity: 1.5; 
     font-family: 'Roboto'; 
 }
